--- a/web/themes/tieto_admin/src/sass/paragraphs/text-boxes.scss
+++ b/web/themes/tieto_admin/src/sass/paragraphs/text-boxes.scss
@@ -203,3 +203,14 @@
     }
   }
 }
+
+.paragraph--type--text-boxes.paragraph--view-mode--default {
+  &.layout--rounded_image {
+    .field--name-field-paragraphs {
+      .field--name-field-image {
+        width: 34%;
+      }
+    }
+  }
+}
+
